--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div id="canvas"></div>
     <script src="./js/src/background.js"></script>
     <script src="./js/src/obstacles.js"></script>
+    <script src="./js/src/obstacle.js"></script>
     <script src="./js/src/frog.js"></script>
     <script src="./js/src/game.js"></script>
     <script src="./js/script.js"></script>
