--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Frogger</h1>
     <div id="score">0</div>
     <div id="canvas"></div>
+    <script src="./js/src/testimages.js"></script>
     <script src="./js/src/background.js"></script>
     <script src="./js/src/obstacles.js"></script>
     <script src="./js/src/obstacle.js"></script>
