--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <div id="score">0</div>
     <div id="canvas"></div>
     <script src="./js/src/testimages.js"></script>
+    <script src="./js/src/score.js"></script>
+    <script src="./js/src/timer.js"></script>
+    <script src="./js/src/gameover.js"></script>
     <script src="./js/src/background.js"></script>
     <script src="./js/src/obstacles.js"></script>
     <script src="./js/src/obstacle.js"></script>
