refactoring - background class actually represents only the road

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="./js/src/score.js"></script>
     <script src="./js/src/timer.js"></script>
     <script src="./js/src/gameover.js"></script>
-    <script src="./js/src/background.js"></script>
+    <script src="./js/src/baseRoad.js"></script>
     <script src="./js/src/obstacles.js"></script>
     <script src="./js/src/obstacle.js"></script>
     <script src="./js/src/frog.js"></script>
