adding wooden tokens - not working this new idea

--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
 
     <div id="canvas"></div>
     <script src="./js/src/testimages.js"></script>
+
     <script src="./js/src/score.js"></script>
     <script src="./js/src/timer.js"></script>
     <script src="./js/src/gameover.js"></script>
+
     <script src="./js/src/baseRoad.js"></script>
     <script src="./js/src/obstacles.js"></script>
     <script src="./js/src/obstacle.js"></script>
+
+    <script src="./js/src/baseRiver.js"></script>
+    <script src="./js/src/tokens.js"></script>
+    <script src="./js/src/token.js"></script>
+
     <script src="./js/src/frog.js"></script>
     <script src="./js/src/game.js"></script>
     <script src="./js/script.js"></script>
