--- a/index.html
+++ b/index.html
@@ -8,9 +8,24 @@
     <title>Frogger Version Marcia</title>
   </head>
   <body>
-    <h1>Frogger</h1>
+    <div class="flexed">
+      <h1>
+        Frogger
+        <span class="wtool">
+          <span
+            data-descr="Frogger is tobe played with keyboard arrows. On the river, the continuous press is disabled since the frog needs to jump carefully"
+          >
+            <img
+              src="./img/questionmark.png"
+              alt="question mark"
+              width="20px"
+            />
+          </span>
+        </span>
+      </h1>
+      <div id="canvas"></div>
+    </div>
 
-    <div id="canvas"></div>
     <script src="./js/src/testimages.js"></script>
 
     <script src="./js/src/score.js"></script>
